@@ -463,6 +463,7 @@ text = "
 Frédéric Wagner
 Jeff Breidenbach (jab)
 Laurent Birtz
+Tomasz Sikorski (Tomsik)
 "
 [/about]
 
